Fix merge issues after pulling in 4.10.3 into 5.0.0
Fix merge issues after pulling in 4.10.3 into 5.0.0

#release/4.10.3