@@ -16,7 +16,13 @@
 
 package org.axonframework.modelling.command;
 
-import org.axonframework.commandhandling.*;
+import org.axonframework.commandhandling.CommandBus;
+import org.axonframework.commandhandling.CommandHandler;
+import org.axonframework.commandhandling.CommandHandlingComponent;
+import org.axonframework.commandhandling.CommandMessage;
+import org.axonframework.commandhandling.CommandResultMessage;
+import org.axonframework.commandhandling.GenericCommandResultMessage;
+import org.axonframework.commandhandling.NoHandlerForCommandException;
 import org.axonframework.commandhandling.annotation.AnnotationCommandHandlerAdapter;
 import org.axonframework.commandhandling.annotation.CommandMessageHandlingMember;
 import org.axonframework.common.AxonConfigurationException;
@@ -35,7 +41,14 @@ import org.axonframework.modelling.command.inspection.CreationPolicyMember;
 
 import java.lang.reflect.Executable;
 import java.lang.reflect.Method;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.Set;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
 
@@ -48,9 +61,9 @@ import static org.axonframework.modelling.command.AggregateCreationPolicy.NEVER;
  * annotations may appear on methods, in which case a specific aggregate instance needs to be targeted by the command,
  * or on the constructor. The latter will create a new Aggregate instance, which is then stored in the repository.
  * <p>
- * Despite being an {@link CommandHandlingComponent} it does not actually handle the commands. During registration to the
- * {@link CommandBus} it registers the {@link CommandHandlingComponent}s directly instead of itself so duplicate command
- * handlers can be detected and handled correctly.
+ * Despite being an {@link CommandHandlingComponent} it does not actually handle the commands. During registration to
+ * the {@link CommandBus} it registers the {@link CommandHandlingComponent}s directly instead of itself so duplicate
+ * command handlers can be detected and handled correctly.
  *
  * @param <T> the type of aggregate this handler handles commands for
  * @author Allard Buijze
@@ -144,7 +157,7 @@ public class AggregateAnnotationCommandHandler<T> implements CommandHandlingComp
                         messageHandler -> commandBus.subscribe(entry.getKey(), messageHandler)
                 ))
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
         return () -> subscriptions.stream().map(Registration::cancel).reduce(Boolean::logicalOr).orElse(false);
     }
 
@@ -162,7 +175,7 @@ public class AggregateAnnotationCommandHandler<T> implements CommandHandlingComp
                       .flatMap(List::stream)
                       .collect(Collectors.groupingBy(this::getHandlerSignature))
                       .forEach((signature, commandHandlers) -> initializeHandler(
-                              aggregateModel, commandHandlers.get(0), handlersFound
+                              aggregateModel, commandHandlers.getFirst(), handlersFound
                       ));
 
         return handlersFound;
@@ -185,7 +198,7 @@ public class AggregateAnnotationCommandHandler<T> implements CommandHandlingComp
             Optional<AggregateCreationPolicy> policy = handler.unwrap(CreationPolicyMember.class)
                                                               .map(CreationPolicyMember::creationPolicy);
 
-            MessageHandler<CommandMessage<?>, CommandResultMessage<?>> messageHandler = null;
+            MessageHandler<CommandMessage<?>, CommandResultMessage<?>> messageHandler;
             if (cmh.isFactoryHandler()) {
                 assertThat(
                         policy,
@@ -194,21 +207,15 @@ public class AggregateAnnotationCommandHandler<T> implements CommandHandlingComp
                 );
                 messageHandler = new AggregateConstructorCommandHandler(handler);
             } else {
-                switch (policy.orElse(NEVER)) {
-                    case ALWAYS:
-                        messageHandler = new AlwaysCreateAggregateCommandHandler(
-                                handler, factoryPerType.get(handler.declaringClass())
-                        );
-                        break;
-                    case CREATE_IF_MISSING:
-                        messageHandler = new AggregateCreateOrUpdateCommandHandler(
-                                handler, factoryPerType.get(handler.declaringClass())
-                        );
-                        break;
-                    case NEVER:
-                        messageHandler = new AggregateCommandHandler(handler);
-                        break;
-                }
+                messageHandler = switch (policy.orElse(NEVER)) {
+                    case ALWAYS -> new AlwaysCreateAggregateCommandHandler(
+                            handler, factoryPerType.get(handler.declaringClass())
+                    );
+                    case CREATE_IF_MISSING -> new AggregateCreateOrUpdateCommandHandler(
+                            handler, factoryPerType.get(handler.declaringClass())
+                    );
+                    case NEVER -> new AggregateCommandHandler(handler);
+                };
             }
             handlersFound.add(messageHandler);
             supportedCommandsByName.computeIfAbsent(cmh.commandName(), key -> new HashSet<>()).add(messageHandler);
